--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,9 @@
 @use "./styles/partials/responsive" as *;
 
 .app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-image: url(../src/assets/images/bg.jpg);
   background-size: cover;
   background-attachment: fixed;
